--- a/src/app/controls/nav-bar/nav-bar.component.scss
+++ b/src/app/controls/nav-bar/nav-bar.component.scss
@@ -153,6 +153,8 @@
 
 @include respond-below(babyshark) {
   .navbar {
-    
+    &__toggle-dark, &__toggle-light {
+      display: none;
+    }
   }
 }
