--- a/src/app/pages/hex-to-binary/hex-to-binary.component.scss
+++ b/src/app/pages/hex-to-binary/hex-to-binary.component.scss
@@ -140,6 +140,10 @@
     &__decimal {
       width: 100%;
     }
+
+    &__balloon {
+      display: none;
+    }
   }
 }
 
