--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,7 +31,7 @@ body {
   --container-max-width-ds: 1200px;
 
   //border styles
-  --color-border-standard-dark: #30363c;
+  --color-border-standard-dark: #73797e;
   --color-border-standard-light: #c5cbd2;
 
   --color-border-focus-dark: #f0dd09;
